--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loading": "^2.0.3",
+    "react-loading-indicators": "^1.0.0",
     "react-router": "^7.3.0",
     "tailwindcss": "^4.0.14"
   },
